--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -25,7 +25,7 @@ jobs:
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
       with:
-        ACTIONS_DEPLOY_KEY: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-        EXTERNAL_REPOSITORY: HuiGong-dev/HuiGong-dev.github.io
-        PUBLISH_BRANCH: main
-        PUBLISH_DIR: ./public
+        github_token: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+        external_repository: HuiGong-dev/HuiGong-dev.github.io
+        publish_branch: main
+        publish_dir: ./public
