--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -9,10 +9,11 @@ jobs:
   build-deploy:
     runs-on: macos-latest
     steps:
-    - uses: actions/checkout@v2
-      with:
-          submodules: true  # Fetch Hugo themes (true OR recursive)
-          fetch-depth: 0    # Fetch all history for .GitInfo and .Lastmod
+    - name: Git checkout
+      uses: actions/checkout@v2
+    
+    - name: Update theme
+      run: git submodule update --init --recursive
 
     - name: Setup Hugo
       uses: peaceiris/actions-hugo@v2
