--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
 baseURL = 'https://huigong-dev.github.io'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
+title = 'Dev Space'
 theme = "ananke"
