--- a/config.toml
+++ b/config.toml
@@ -1,47 +1,4 @@
 baseURL = 'https://huigong-dev.github.io'
 languageCode = 'en-us'
-title = "Hui's Dev Space"
+title = 'Dev Space'
 theme = "ananke"
-resourceDir = "../resources"
-
-DefaultContentLanguage = "en"
-SectionPagesMenu = "main"
-Paginate = 10 # this is set low for demonstrating with dummy content. Set to a higher number
-googleAnalytics = ""
-enableRobotsTXT = true
-
-# [languages]
-#   [languages.en]
-#     title = "My blog"
-#     weight = 1
-#     contentDir = "content/en"
-#   [languages.fr]
-#     title = "Mon blogue"
-#     weight = 2
-#     contentDir = "content/fr"
-
-[sitemap]
-  changefreq = "monthly"
-  priority = 0.5
-  filename = "sitemap.xml"
-
-[params]
-  author = ""
-  favicon = ""
-  site_logo = ""
-  description = "Coding and more"
-  facebook = ""
-  twitter = ""
-  instagram = ""
-  youtube = ""
-  github = "https://github.com/HuiGong-dev"
-  gitlab = ""
-  linkedin = ""
-  mastodon = ""
-  slack = ""
-  stackoverflow = ""
-  rss = ""
-  # choose a background color from any on this page: http://tachyons.io/docs/themes/skins/ and preface it with "bg-"
-  background_color_class = "bg-black"
-  featured_image = ""
-  recent_posts_number = 2
