--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,19 @@
 theme = "hyde"
 baseURL = 'https://huigong-dev.github.io/'
 languageCode = 'en-us'
+defaultContentLanguage = 'en'
 title = 'Hui Gong'
+defaultContentLanguageInSubdir = true
+
+
+[languages]
+  [languages.en]
+    languageName = "English"
+    weight = 1
+
+  [languages.de]
+    languageName = "Deutsch"
+    weight = 2
 
 [Menus]
   main = [
