--- a/config.toml
+++ b/config.toml
@@ -5,6 +5,17 @@ defaultContentLanguage = 'en'
 title = 'Hui Gong'
 defaultContentLanguageInSubdir = true
 
+googleAnalytics = "<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-212132284-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-212132284-1');
+</script>
+"
+
 
 [languages]
   [languages.en]
