add customized layout single.html to support last update date info

--- a/config.toml
+++ b/config.toml
@@ -25,3 +25,11 @@ googleAnalytics = "UA-212132284-1"
 
   [params]
     description = "Coding and more"
+
+enableGitInfo = true
+
+[frontmatter]
+  date = ['date', 'publishDate', 'lastmod']
+  expiryDate = ['expiryDate']
+  lastmod = [':git', 'lastmod', 'date', 'publishDate']
+  publishDate = ['publishDate', 'date']
