--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -21,7 +21,7 @@ jobs:
         hugo-version: '0.88.1'
 
     - name: Build
-      run: hugo  --minify
+      run: hugo  --enableGitInfo --minify
 
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
