--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -3,34 +3,34 @@ name: hugo publish
 on:
   push:
     branches:
-    - main
+      - main
 
 jobs:
   build-deploy:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
-    - name: Git checkout
-      uses: actions/checkout@v2
-      with:
-        fetch-depth: 0
-    
-    - name: Update theme
-      run: git submodule update --init --recursive
+      - name: Git checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
-    - name: Setup Hugo
-      uses: peaceiris/actions-hugo@v2
-      with:
-        hugo-version: '0.88.1'
+      - name: Update theme
+        run: git submodule update --init --recursive
 
-    - name: Build
-      run: hugo  --enableGitInfo --minify
+      - name: Setup Hugo
+        uses: peaceiris/actions-hugo@v2
+        with:
+          hugo-version: "0.88.1"
 
-    - name: Deploy
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        personal_token: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-        external_repository: HuiGong-dev/HuiGong-dev.github.io
-        publish_branch: main
-        publish_dir: ./public
-        user_name: HuiGong-dev
-        user_email: hellohuigong@gmail.com
+      - name: Build
+        run: hugo  --enableGitInfo --minify
+
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          personal_token: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+          external_repository: HuiGong-dev/HuiGong-dev.github.io
+          publish_branch: main
+          publish_dir: ./public
+          user_name: HuiGong-dev
+          user_email: hellohuigong@gmail.com
